--- a/src/Components/Shared/Loading/Loading.scss
+++ b/src/Components/Shared/Loading/Loading.scss
@@ -1,9 +1,9 @@
 .loader{
     padding-top: 100px;
     padding-bottom: 100px;
-    position: absolute;
-    left: 0;
-    right: 0;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
 
     div {
         border: 16px solid #f3f3f3; /* Light grey */
